improved AWT and platform utils